# azst

./: .gitignore  Cargo.toml  LICENSE.md  README.md  install.ps1  install.sh
.github/workflows/: ci.yml  release.yml
src/: azcopy_output.rs  azure.rs  cli.rs  main.rs  output.rs  utils.rs
src/commands/: cat.rs  cp.rs  du.rs  ls.rs  mb.rs  mod.rs  mv.rs  rb.rs  rm.rs  sync.rs
tests/: integration_tests.rs
