[package]
name = "azst"
version = "0.1.0"
edition = "2021"
authors = ["Damián Silvani <munshkr@gmail.com>"]
description = "A Rust CLI tool that wraps Azure CLI for easier storage container management"
readme = "README.md"
homepage = "https://github.com/dymaxionlabs/azst"
repository = "https://github.com/dymaxionlabs/azst"
license = "MIT"
keywords = ["azure", "storage", "cli", "cloud"]
categories = ["command-line-utilities"]

[[bin]]
name = "azst"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["io", "io-util", "codec"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
colored = "2.0"
indicatif = "0.17"
dirs = "5.0"
glob = "0.3"
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1"
azure_identity = "0.21.0"
azure_storage = "0.21.0"
azure_storage_blobs = "0.21.0"
azure_core = "0.21.0"
azure_mgmt_storage = "0.21.0"
azure_mgmt_resources = { version = "0.21.0", features = [
  "package-subscriptions-2021-01",
] }
time = "0.3.44"
futures = "0.3.31"
openssl = { version = "0.10", features = ["vendored"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
